--- a/event-management-system/src/main/resources/properties/queries.properties
+++ b/event-management-system/src/main/resources/properties/queries.properties
@@ -8,22 +8,22 @@ org.com.ems.queries.attendee.get-id = SELECT * FROM attendees WHERE id = $1
 org.com.ems.queries.attendee.delete-id = DELETE FROM attendees WHERE id = $1
 
 # events
-org.com.ems.queries.event.save = INSERT INTO events (id, created_at, last_updated, denomination, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$11,$12)
-org.com.ems.queries.event.edit = UPDATE events SET id = $1, last_updated = $2, denomination = $3, place = $4, event_type = $5, attendee_ids = $6, organizer_id = $7, limit_of_people = $8, sponsors_ids = $9, start_time = $10, duration = $11 WHERE id = $12
+org.com.ems.queries.event.save = INSERT INTO events (id, created_at, last_updated, name, place, event_type, attendee_ids, organizer_id, limit_of_people, sponsors_ids, start_time, duration) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$11,$12)
+org.com.ems.queries.event.edit = UPDATE events SET id = $1, last_updated = $2, name = $3, place = $4, event_type = $5, attendee_ids = $6, organizer_id = $7, limit_of_people = $8, sponsors_ids = $9, start_time = $10, duration = $11 WHERE id = $12
 org.com.ems.queries.event.get-all = SELECT * FROM events
 org.com.ems.queries.event.get-id = SELECT * FROM events WHERE id = $1
 org.com.ems.queries.event.delete-id = DELETE FROM events WHERE id = $1
 
 # organizers
-org.com.ems.queries.organizer.save = INSERT INTO organizers (id, created_at, last_updated, denomination, website, information, event_types, email, phone_number, physical_address) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10)
-org.com.ems.queries.organizer.edit = UPDATE organizers SET id = $1, last_updated = $2, denomination = $3, website = $4, information = $5, event_types = $6, email = $7, phone_number = $8, physical_address = $9  WHERE id = $10
+org.com.ems.queries.organizer.save = INSERT INTO organizers (id, created_at, last_updated, name, website, information, event_types, email, phone_number, physical_address) values($1,$2,$3,$4,$5,$6,$7,$8,$9,$10)
+org.com.ems.queries.organizer.edit = UPDATE organizers SET id = $1, last_updated = $2, name = $3, website = $4, information = $5, event_types = $6, email = $7, phone_number = $8, physical_address = $9  WHERE id = $10
 org.com.ems.queries.organizer.get-all = SELECT * FROM organizers
 org.com.ems.queries.organizer.get-id = SELECT * FROM organizers WHERE id = $1
 org.com.ems.queries.organizer.delete-id = DELETE FROM organizers WHERE id = $1
 
 # sponsors
-org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, created_at, last_updated, denomination, website, financial_contribution, email, phone_number, physical_address) values($1,$2,$3,$4,$5,$6,$7,$8,$9)
-org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = $1, last_updated = $2, denomination = $3, website = $4, financial_contribution = $5, email = $6, phone_number = $7, physical_address = $8  WHERE id = $9
+org.com.ems.queries.sponsor.save = INSERT INTO sponsors (id, created_at, last_updated, name, website, financial_contribution, email, phone_number, physical_address) values($1,$2,$3,$4,$5,$6,$7,$8,$9)
+org.com.ems.queries.sponsor.edit = UPDATE sponsors SET id = $1, last_updated = $2, name = $3, website = $4, financial_contribution = $5, email = $6, phone_number = $7, physical_address = $8  WHERE id = $9
 org.com.ems.queries.sponsor.get-all = SELECT * FROM sponsors
 org.com.ems.queries.sponsor.get-id = SELECT * FROM sponsors WHERE id = $1
 org.com.ems.queries.sponsor.delete-id = DELETE FROM sponsors WHERE id = $1
