--- a/attendee-service/pom.xml
+++ b/attendee-service/pom.xml
@@ -101,6 +101,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.evaggelos99</groupId>
+			<artifactId>r2dbc-h2</artifactId>
+			<version>1.1.0.BUILD-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
