--- a/event-service/pom.xml
+++ b/event-service/pom.xml
@@ -96,20 +96,13 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.github.evaggelos99</groupId>
+			<artifactId>r2dbc-h2</artifactId>
+			<version>1.1.0.BUILD-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	
-	<!--<dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>2023.0.2</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>-->
-    
 	<build>
 		<plugins>
 			<plugin>
