--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<org.hibernate.version>5.6.15.Final</org.hibernate.version>
 		<org.hibernate.validator.version>8.0.1.Final</org.hibernate.validator.version>
 		<springdoc.openapi.starter.webmvc.ui.version>2.5.0</springdoc.openapi.starter.webmvc.ui.version>
-		<org.apache.maven.plugins.version>3.3.1</org.apache.maven.plugins.version>
+		<org.apache.maven.plugins.version>3.4.0</org.apache.maven.plugins.version>
 		<hibernate.core.version>6.1.7.Final</hibernate.core.version>
 		<postgres.version>42.7.3</postgres.version>
 	</properties>
@@ -42,6 +42,7 @@
 		<module>ticket-api</module>
 		<module>ticket-service</module>
 		<module>event-producer</module>
+		<module>eureka-server</module>
 	</modules>
 
 	<dependencies>
@@ -64,21 +65,21 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>2023.0.2</version>
+				<version>2023.0.3</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>3.3.0</version>
+				<version>3.3.2</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-parent</artifactId>
-				<version>2023.0.0</version>
+				<version>2023.0.3</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
