--- a/attendee-api/pom.xml
+++ b/attendee-api/pom.xml
@@ -20,7 +20,6 @@
         <dependency>
             <groupId>io.github.evaggelos99</groupId>
             <artifactId>common-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>jakarta.validation</groupId>
@@ -31,6 +30,10 @@
             <artifactId>swagger-annotations-jakarta</artifactId>
             <version>2.2.22</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.evaggelos99</groupId>
+            <artifactId>ticket-api</artifactId>
         </dependency>
     </dependencies>
 
