--- a/common-api/pom.xml
+++ b/common-api/pom.xml
@@ -6,6 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common-api</artifactId>
     <name>common-api</name>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
