--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     </properties>
 
     <modules>
+        <module>event-management-system-dependencies</module>
         <module>common-api</module>
         <module>sponsor-api</module>
         <module>attendee-api</module>
@@ -66,6 +67,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>3.4.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.evaggelos99</groupId>
+                <artifactId>event-management-system-dependencies</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
